--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo">alok23@deeplearning.io</a>
+            <a href="#" class="logo">Alok Ranjan Srivastava</a>
             <ul class="nav-links">
                 <li><a onclick="showSection('resume')" class="active">Resume</a></li>
                 <li><a onclick="showSection('projects')">Projects</a></li>
@@ -358,8 +358,7 @@
         <!-- Resume Section -->
         <section id="resume" class="active">
             <div class="hero">
-                <h1>Alok Ranjan Srivastava</h1>
-                <p>Senior AI Inference Engineer • Specialized in CPU architecture optimization, AI model deployment, and edge inference systems</p>
+                <p>Deep Learning • CPU Architecture, Edge Inference Systems, Performace Analysis and Optimization</p>
             </div>
 
             <!-- Experience -->
@@ -369,7 +368,7 @@
                 <div class="resume-entry">
                     <div class="resume-entry-header">
                         <span class="resume-entry-title">AI Inference Contractor</span>
-                        <span class="resume-entry-date">2024 - Present</span>
+                        <span class="resume-entry-date">2025 - Present</span>
                     </div>
                     <div class="resume-entry-company">Tether.io (QVAC Project)</div>
                     <div class="resume-entry-description">
@@ -379,12 +378,12 @@
 
                 <div class="resume-entry">
                     <div class="resume-entry-header">
-                        <span class="resume-entry-title">Senior AI Inference Engineer</span>
-                        <span class="resume-entry-date">2018 - 2024</span>
+                        <span class="resume-entry-title">Software System Designer</span>
+                        <span class="resume-entry-date">2019 - 2025</span>
                     </div>
                     <div class="resume-entry-company">AMD</div>
                     <div class="resume-entry-description">
-                        6+ years optimizing CPU inference for deep neural networks. Led development of ZenDNN project, TensorFlow operation wrappers, and SDPA optimization. Designed and implemented DNN operation wrapper APIs for cross-platform compatibility.
+                        6+ years of experience in CPU inference library development for deep neural networks. Designed and implemented CPU inference library APIs for cross-platform compatibility.
                     </div>
                 </div>
             </div>
@@ -395,22 +394,19 @@
                 
                 <h3>Languages</h3>
                 <div class="skills-grid">
-                    <div class="skill-tag">C++</div>
+                    <div class="skill-tag">C/C++</div>
                     <div class="skill-tag">Python</div>
-                    <div class="skill-tag">Java</div>
+                    <div class="skill-tag">Data Structures and Algorithms</div>
                 </div>
 
                 <h3 style="margin-top: 1.5rem;">Specializations</h3>
                 <div class="skills-grid">
                     <div class="skill-tag">AI Inference Optimization</div>
                     <div class="skill-tag">CPU Architecture</div>
-                    <div class="skill-tag">ML Compilers</div>
                     <div class="skill-tag">Model Quantization</div>
-                    <div class="skill-tag">Edge Deployment</div>
                     <div class="skill-tag">TensorFlow</div>
-                    <div class="skill-tag">LLAMA.CPP</div>
-                    <div class="skill-tag">GGUF Format</div>
-                    <div class="skill-tag">INT8/BFLOAT16</div>
+                    <div class="skill-tag">PyTorch</div>
+                    <div class="skill-tag">Library Development</div>
                 </div>
 
                 <h3 style="margin-top: 1.5rem;">Platforms & Tools</h3>
@@ -419,7 +415,7 @@
                     <div class="skill-tag">Windows</div>
                     <div class="skill-tag">AWS</div>
                     <div class="skill-tag">Git/GitHub</div>
-                    <div class="skill-tag">CI/CD</div>
+                    <div class="skill-tag">Docker</div>
                 </div>
             </div>
 
